[package]
name = "market-xml"
version = "0.1.0"
authors = ["Alexander Koval <kovalidis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dependencies]
byteorder = "1.3"
bytes = "0.5"
clap = { git = "https://github.com/clap-rs/clap.git", rev = "bc738e1" }
flate2 = "1.0"
indicatif = "0.14"
prost = "0.6"
prost-types = "0.6"
# quick-xml = "0.17"
quick-xml = { git = "https://github.com/anti-social/quick-xml", rev = "721dee7" }
snafu = "0.6"
snafu-derive = "0.6"

[build-dependencies]
prost-build = "0.6"

[dev-dependencies]
failure = "0.1"
failure_derive = "0.1"
