[package]
name = "market-xml"
version = "0.1.0"
authors = ["Alexander Koval <kovalidis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = "fat"
codegen-units = 1

#[profile.release-debug]
#debug = true

[dependencies]
byteorder = "1.3"
bytes = "1.5"
clap = { git = "https://github.com/clap-rs/clap.git", rev = "bc738e1" }
env_logger = "0.10.0"
flate2 = "1.0"
indicatif = "0.14"
log = "0.4.20"
mimalloc = { version = "0.1.17", default-features = false }
prost = "0.12"
prost-types = "0.12"
# quick-xml = "0.22"
quick-xml = { git = "https://github.com/anti-social/quick-xml", rev = "5ef43af" }
reqwest = { version = "0.11.22", default-features = false, features = ["blocking", "default-tls", "gzip"] }
snafu = "0.7"
snafu-derive = "0.7"

[build-dependencies]
prost-build = "0.12"

[dev-dependencies]
failure = "0.1"
failure_derive = "0.1"
